--- a/PetraPulse/src/main/resources/application.properties
+++ b/PetraPulse/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+##JDBC
+spring.datasource.url=jdbc:postgresql://localhost:5432/PetraPulseDB
+spring.datasource.username=reneh
+spring.datasource.password=1234
