--- a/PetraPulse/src/main/resources/application.properties
+++ b/PetraPulse/src/main/resources/application.properties
@@ -2,3 +2,9 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/PetraPulseDB
 spring.datasource.username=reneh
 spring.datasource.password=1234
+
+##Hibernate
+hibernate.ddl-auto=validate
+
+## FlyWay
+spring.flyway.baseline-on-migrate=true
