--- a/PetraPulse/src/main/resources/application.properties
+++ b/PetraPulse/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 ##JDBC
 spring.datasource.url=jdbc:postgresql://localhost:5432/PetraPulseDB
-spring.datasource.username=reneh
+spring.datasource.username=farah
+#spring.datasource.username=reneh
 spring.datasource.password=1234
 
 ##Hibernate
