--- a/PetraPulse/build.gradle
+++ b/PetraPulse/build.gradle
@@ -29,6 +29,11 @@ dependencies {
     //FlyWay Migration Dependency
     implementation 'org.flywaydb:flyway-core'
 
+	//JWT Dependencies
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'org.postgresql:postgresql'
