--- a/PetraPulse/src/main/resources/application.properties
+++ b/PetraPulse/src/main/resources/application.properties
@@ -4,7 +4,8 @@ spring.datasource.username=reneh
 spring.datasource.password=1234
 
 ##Hibernate
-hibernate.ddl-auto=validate
+hibernate.ddl-auto=create-drop
+
 
 ## FlyWay
 spring.flyway.baseline-on-migrate=true
