--- a/PetraPulse/src/main/resources/application.properties
+++ b/PetraPulse/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=reneh
 spring.datasource.password=1234
 
 ##Hibernate
-hibernate.ddl-auto=create-drop
+hibernate.ddl-auto=validate
 
 
 ## FlyWay
